Fixed filter z-index issue

--- a/src/components/Filter/Filter.scss
+++ b/src/components/Filter/Filter.scss
@@ -12,5 +12,8 @@
     background-color: $gray;
     padding: 0.7rem 1.2rem;
     @include border-radius;
+    @media (min-width: 1025px) {
+      margin: 1rem 0;
+    }
   }
 }
