--- a/src/pages/PokemonList/PokemonList.scss
+++ b/src/pages/PokemonList/PokemonList.scss
@@ -6,6 +6,7 @@ a {
 }
 
 .list-container::before {
+  z-index: -1;
   content: '';
   position: absolute;
   top: 0;
