--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -24,3 +24,7 @@ body {
   border-top-right-radius: 2rem;
   border-bottom-right-radius: 2rem;
 }
+
+.container {
+  margin-inline: 2rem;
+}
